--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "tsdown",
-    "dev": "tsdown --watch",
+    "dev": "tsdown --watch --on-success 'node apps/api/dist/index.mjs'",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "pnpm run build"
@@ -25,8 +25,8 @@
     "@lib/zenith": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "^25.2.3",
-    "tsdown": "^0.20.3",
+    "@types/node": "^25.3.2",
+    "tsdown": "^0.21.0-beta.2",
     "typescript": "^5.9.3"
   },
   "pnpm": {
