chore: fix @lib resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,18 @@
   "compilerOptions": {
     "target": "esnext",
     "lib": ["ESNext"],
-    "moduleDetection": "force",
+    "customConditions": ["dev"],
     "module": "preserve",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "types": ["node"],
     "strict": true,
+    "strictNullChecks": true,
     "declaration": true,
-    "emitDeclarationOnly": true,
+    "noEmit": true,
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
+    "skipDefaultLibCheck": true,
     "skipLibCheck": true,
-    "sourceMap": true,
-    "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true,
   },
 }
