--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   ],
   "scripts": {
     "build": "tsdown",
-    "dev": "tsdown --watch --on-success 'node apps/api/dist/index.mjs'",
+    "dev": "tsdown --watch",
     "test": "vitest",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsgo",
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
@@ -26,12 +26,12 @@
   },
   "devDependencies": {
     "@types/node": "^25.3.2",
-    "tsdown": "^0.21.0-beta.2",
-    "typescript": "^5.9.3"
+    "@typescript/native-preview": "7.0.0-dev.20260227.1",
+    "tsdown": "^0.21.0-beta.2"
   },
   "pnpm": {
     "overrides": {
-      "rolldown": "1.0.0-rc.5"
+      "rolldown": "1.0.0-rc.6"
     }
   }
 }
